assignee details
